[DEV][FE] Homepage [DEV][FE] Wallpaper Search Result

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,7 +1,8 @@
 .home {
-    background-color: rebeccapurple;
+    min-height      : 1200px;
+    background-color: var(--color-white);
 
     &-title {
-        color: azure;
+        color: rgb(49, 194, 194);
     }
 }
