--- a/free-wallpaper-front-end/src/components/Category/Category.scss
+++ b/free-wallpaper-front-end/src/components/Category/Category.scss
@@ -4,18 +4,22 @@
     &-tag {
         font-size    : 1.1rem;
         font-weight  : 600;
-        border       : 0.1rem solid var(--color-black);
+        border       : 1px solid var(--color-black);
         padding      : 0.2rem 1rem;
-        border-radius: 1rem;
+        border-radius: 0.4rem;
+
+        &-selected {
+            background-color: var(--color-black);
+            color           : var(--color-white);
+        }
     }
 
-    &-selected {
-        background-color: var(--color-black);
-        color           : var(--color-white);
-    }
+
 
     &-list {
-        overflow-x    : scroll;
+        display       : flex;
+        gap           : 1rem;
+        overflow-x    : auto;
         padding-bottom: 0.4rem;
 
         &::-webkit-scrollbar {
