--- a/free-wallpaper-front-end/src/components/Header/Header.scss
+++ b/free-wallpaper-front-end/src/components/Header/Header.scss
@@ -1,18 +1,20 @@
 .header {
-    position: sticky;
-    top     : 0;
-    z-index : 2;
+    position        : sticky;
+    top             : 0;
+    z-index         : 2;
+    background-color: var(--color-white);
 
     &-logo {
         font-family: "Keania One", sans-serif;
+        cursor     : pointer;
     }
-
-
 
     &-explore {
         font-weight     : 600;
         border          : none;
         background-color: var(--color-white);
+        border-radius   : 0.5rem;
+        padding         : 0.3rem 0.2rem;
     }
 
     &-sign-up {
