--- a/free-wallpaper-front-end/src/pages/AccountManagement/UserRow/UserRow.scss
+++ b/free-wallpaper-front-end/src/pages/AccountManagement/UserRow/UserRow.scss
@@ -18,3 +18,11 @@
     background-color: #000;
   }
 }
+
+.dot-action {
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  font-weight: 600;
+  font-size: 20px;
+}
