--- a/free-wallpaper-front-end/src/pages/AccountManagement/UserTable/UserTable.scss
+++ b/free-wallpaper-front-end/src/pages/AccountManagement/UserTable/UserTable.scss
@@ -8,6 +8,11 @@ table {
       padding: 12px;
       text-align: left;
       border-bottom: 1px solid #ddd;
+      user-select: none;
+
+      & img {
+        width: 20px;
+      }
 
       &:first-child {
         width: 40px;
@@ -16,6 +21,10 @@ table {
       &:last-child {
         width: 120px;
       }
+    }
+
+    .sortable {
+      cursor: pointer;
     }
   }
 
