--- a/free-wallpaper-front-end/src/components/Category/Category.scss
+++ b/free-wallpaper-front-end/src/components/Category/Category.scss
@@ -2,6 +2,7 @@
 
 
     &-tag {
+        cursor       : pointer;
         font-size    : 1.1rem;
         font-weight  : 600;
         border       : 1px solid var(--color-black);
