--- a/free-wallpaper-front-end/src/components/Wallpaper/Wallpaper.scss
+++ b/free-wallpaper-front-end/src/components/Wallpaper/Wallpaper.scss
@@ -11,11 +11,10 @@
 
     &-icon {
         position        : absolute;
-        left            : 0;
+        left            : 1rem;
+        top             : 1rem;
         background-color: var(--color-white);
         padding         : 0.5rem;
-        margin-top      : 0.5rem;
-        margin-left     : 0.5rem;
         font-size       : 1.2rem;
         border-radius   : 0.2rem;
         opacity         : 0;
@@ -50,6 +49,15 @@
         }
     }
 
+    &-download-btn {
+        position  : absolute;
+        left      : 1rem;
+        bottom    : 1rem;
+        color     : var(--color-white);
+        opacity   : 0;
+        transition: opacity .5s;
+    }
+
     &:hover {
         .wallpaper {
             &-image {
@@ -63,7 +71,8 @@
 
 
             &-icon,
-            &-creator {
+            &-creator,
+            &-download-btn {
                 opacity: 1;
             }
         }
