--- a/free-wallpaper-front-end/src/components/Category/Category.scss
+++ b/free-wallpaper-front-end/src/components/Category/Category.scss
@@ -2,12 +2,14 @@
 
 
     &-tag {
-        cursor       : pointer;
-        font-size    : 1.1rem;
-        font-weight  : 600;
-        border       : 1px solid var(--color-black);
-        padding      : 0.2rem 1rem;
-        border-radius: 0.4rem;
+        cursor         : pointer;
+        font-size      : 1.1rem;
+        font-weight    : 600;
+        border         : 1px solid var(--color-black);
+        padding        : 0.2rem 1rem;
+        border-radius  : 0.4rem;
+        text-decoration: none;
+        color          : var(--color-black);
 
         &-selected {
             background-color: var(--color-black);
