--- a/free-wallpaper-front-end/src/pages/RequestManagement/UserRequestTable/UserRequestTable.scss
+++ b/free-wallpaper-front-end/src/pages/RequestManagement/UserRequestTable/UserRequestTable.scss
@@ -1,28 +1,28 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
+// .header {
+//   display: flex;
+//   justify-content: space-between;
+//   margin-bottom: 20px;
 
-  input[type="text"],
-  select {
-    padding: 8px 12px;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
+//   input[type="text"],
+//   select {
+//     padding: 8px 12px;
+//     margin-right: 10px;
+//     border: 1px solid #ccc;
+//     border-radius: 4px;
+//   }
 
-  button {
-    padding: 8px 12px;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #ff7f50;
-    color: white;
-    border: none;
-    cursor: pointer;
+//   button {
+//     padding: 8px 12px;
+//     margin-right: 10px;
+//     border: 1px solid #ccc;
+//     border-radius: 4px;
+//     background-color: #ff7f50;
+//     color: white;
+//     border: none;
+//     cursor: pointer;
 
-    &:hover {
-      background-color: #ff6347;
-    }
-  }
-}
+//     &:hover {
+//       background-color: #ff6347;
+//     }
+//   }
+// }
