--- a/free-wallpaper-front-end/src/components/Wallpaper/Wallpaper.scss
+++ b/free-wallpaper-front-end/src/components/Wallpaper/Wallpaper.scss
@@ -3,10 +3,12 @@
     position     : relative;
 
 
+
     &-image {
         width        : 100%;
-        height       : auto;
+        height       : 100%;
         border-radius: 0.5rem;
+        object-fit   : cover;
     }
 
     &-icon {
