--- a/free-wallpaper-front-end/src/pages/UserCollections/UserCollections.css
+++ b/free-wallpaper-front-end/src/pages/UserCollections/UserCollections.css
@@ -29,7 +29,6 @@
     margin: 0 10px;
     font-size: 1.5em;
     color: #000;
-    
     text-decoration: none;
 }
 
@@ -41,7 +40,6 @@
 .navigation-buttons {
     display: flex;
     justify-content: flex-start;
-    
     margin-top: 20px;
     width: 100%;
 }
@@ -81,26 +79,6 @@
     display: flex;
     align-items: center;
 }
-
-.nav-button10 span {
-    background-color: #ffffff;
-    color: #000000;
-    border-radius: 50%;
-    padding: 5px 10px;
-    margin-left: 10px;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-.nav-button10 span:hover {
-    background-color: #000000;
-    color: #ffffff;
-    border-radius: 50%;
-    padding: 5px 10px;
-    margin-left: 10px;
-    transition: background-color 0.3s, color 0.3s;
-
-}
-
 .my-gallery {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -113,24 +91,24 @@
     width: 100%;
     height: 250px;
     box-sizing: border-box;
-    text-decoration: none; /* Xóa bỏ gạch chân của link */
-    color: inherit; /* Giữ màu chữ mặc định */
-    cursor: pointer; /* Đổi con trỏ thành hình bàn tay */
-    transition: transform 0.2s; /* Hiệu ứng khi hover */
-    border-radius: 10px; /* Bo viền các ảnh */
+    text-decoration: none; 
+    color: inherit; 
+    cursor: pointer; 
+    transition: transform 0.2s;
+    border-radius: 10px; 
 
 }
 
 .my-gallery-item:hover {
-    transform: scale(1.05); /* Phóng to nhẹ khi hover */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Thêm shadow khi hover */
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
 }
 
 .my-gallery-item img {
     width: 100%;
     height: 70%;
     object-fit: cover;
-    border-radius: 10px; /* Bo viền các ảnh */
+    border-radius: 10px;
 
 }
 
