--- a/free-wallpaper-front-end/src/pages/UserCollectionsDetails/UserCollectionsDetails.css
+++ b/free-wallpaper-front-end/src/pages/UserCollectionsDetails/UserCollectionsDetails.css
@@ -17,15 +17,15 @@
   }
   
   .mt-5 {
-    margin-top: 3rem !important;
+    margin-top: 3rem 
   }
-  
+  ư
   .mt-4 {
-    margin-top: 1.5rem !important;
+    margin-top: 1.5rem 
   }
   
   .ml-3 {
-    margin-left: 1rem !important;
+    margin-left: 1rem 
   }
   
   .font-weight-bold {
