[DEV][FE] Wallpaper List Pagination

--- a/free-wallpaper-front-end/src/components/Header/Header.scss
+++ b/free-wallpaper-front-end/src/components/Header/Header.scss
@@ -3,6 +3,8 @@
   top             : 0;
   z-index         : 2;
   background-color: var(--color-white);
+  padding-top     : 1rem;
+  padding-bottom  : 1rem;
 
   &-logo {
     font-family: "Keania One", sans-serif;
