sua account management table

--- a/free-wallpaper-front-end/src/pages/AccountManagement/Pagination/Pagination.scss
+++ b/free-wallpaper-front-end/src/pages/AccountManagement/Pagination/Pagination.scss
@@ -13,6 +13,17 @@
 
     &:hover {
       background-color: #f4f4f9;
+      color: black;
+    }
+
+    &.active {
+      background-color: #007bff;
+      color: white;
+
+      &:hover {
+        background-color: #007bff;
+        color: white;
+      }
     }
   }
 }
