--- a/free-wallpaper-front-end/src/pages/AccountManagement/UserTable/UserTable.scss
+++ b/free-wallpaper-front-end/src/pages/AccountManagement/UserTable/UserTable.scss
@@ -4,7 +4,7 @@
 
   th,
   td {
-    padding: 8px;
+    padding: 8px 12px;
     border: 1px solid #ccc;
   }
 
@@ -18,6 +18,10 @@
     &.descending::after {
       content: " ⬇";
     }
+  }
+
+  .blocked {
+    background-color: #f8d7da;
   }
 
   .role-change {
