--- a/free-wallpaper-front-end/src/pages/RequestManagement/UserRequestRow/UserRequestRow.scss
+++ b/free-wallpaper-front-end/src/pages/RequestManagement/UserRequestRow/UserRequestRow.scss
@@ -7,7 +7,7 @@
   text-align: center;
 
   &.admin {
-    background-color: #ff7f50;
+    background-color: green;
   }
 
   &.contributor {
@@ -15,7 +15,7 @@
   }
 
   &.viewer {
-    background-color: #000;
+    background-color: red;
   }
 }
 
