--- a/free-wallpaper-front-end/src/styles/_variables.scss
+++ b/free-wallpaper-front-end/src/styles/_variables.scss
@@ -2,6 +2,8 @@ $app-color-white  : #FFFFFF;
 $app-color-black  : #1d1d1d;
 $app-color-green  : #16B712;
 $app-color-brown  : #908D8D;
+$app-color-red    : #ff0000;
+$app-color-red-2  : #d61a1a;
 $app-color-white-1: #f6f6f6;
 $app-color-white-2: #e2e2e2;
 
