--- a/free-wallpaper-front-end/src/pages/UserCollections/UserCollections.css
+++ b/free-wallpaper-front-end/src/pages/UserCollections/UserCollections.css
@@ -76,6 +76,7 @@
     display: flex;
     align-items: center;
 }
+
 .my-gallery {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -88,17 +89,19 @@
     width: 100%;
     height: 250px;
     box-sizing: border-box;
-    text-decoration: none; 
-    color: inherit; 
-    cursor: pointer; 
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
     transition: transform 0.2s;
-    border-radius: 10px; 
+    border-radius: 10px;
+    position: relative;
+
 
 }
 
 .my-gallery-item:hover {
     transform: scale(1.05);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .my-gallery-item img {
@@ -112,6 +115,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
+    text-decoration: none;
     padding: 0 10px;
 }
 
@@ -124,4 +128,22 @@
 
 .my-photo-count {
     text-align: right;
+}
+
+.delete-button {
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.my-gallery-item:hover .delete-button {
+    display: block;
+
 }
