--- a/free-wallpaper-front-end/src/styles/_variables.scss
+++ b/free-wallpaper-front-end/src/styles/_variables.scss
@@ -5,6 +5,6 @@ $app-color-brown  : #908D8D;
 $app-color-red    : #ff0000;
 $app-color-red-2  : #d61a1a;
 $app-color-white-1: #f6f6f6;
-$app-color-white-2: #e2e2e2;
+$app-color-white-2: rgb(233, 233, 233);
 
-$app-color-black-light: #a5a5a5;
+$app-color-black-light: #aaaaaa;
