--- a/free-wallpaper-front-end/src/components/Modal/ReportModal/ReportModal.scss
+++ b/free-wallpaper-front-end/src/components/Modal/ReportModal/ReportModal.scss
@@ -5,9 +5,14 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  .Toastify__toast-container {
+    width: fit-content;
+  }
 }
 
 .report-modal {
