[DEV] - Search Result By Tags

--- a/free-wallpaper-front-end/src/components/Category/Category.scss
+++ b/free-wallpaper-front-end/src/components/Category/Category.scss
@@ -15,6 +15,11 @@
             background-color: var(--color-black);
             color           : var(--color-white);
         }
+
+        &:hover {
+            color           : var(--color-white);
+            background-color: var(--color-black);
+        }
     }
 
 
