--- a/free-wallpaper-front-end/src/components/Wallpaper/Wallpaper.scss
+++ b/free-wallpaper-front-end/src/components/Wallpaper/Wallpaper.scss
@@ -1,82 +1,97 @@
 .wallpaper {
     margin-bottom: 1rem;
-    position     : relative;
+    position: relative;
 
 
 
     &-image {
-        width        : 100%;
-        height       : 100%;
+        width: 100%;
+        height: 100%;
         border-radius: 0.5rem;
-        object-fit   : cover;
+        object-fit: cover;
     }
 
     &-icon {
-        position        : absolute;
-        left            : 1rem;
-        top             : 1rem;
+        position: absolute;
+        left: 1rem;
+        top: 1rem;
         background-color: var(--color-white);
-        padding         : 0.5rem;
-        font-size       : 1.2rem;
-        border-radius   : 0.4rem;
-        opacity         : 0;
-        transition      : opacity .5s;
-        cursor          : pointer;
+        padding: 0.5rem;
+        font-size: 1.2rem;
+        border-radius: 0.4rem;
+        opacity: 0;
+        transition: opacity .5s;
+        cursor: pointer;
     }
 
     &-creator {
-        cursor     : pointer;
-        bottom     : 1rem;
-        right      : 1rem;
-        position   : absolute;
-        display    : flex;
+        cursor: pointer;
+        bottom: 1rem;
+        right: 1rem;
+        position: absolute;
+        display: flex;
         align-items: center;
-        gap        : 1.2rem;
-        opacity    : 0;
-        transition : opacity .5s;
+        gap: 1.2rem;
+        opacity: 0;
+        transition: opacity .5s;
 
         &-name {
             font-size: 1.2rem;
-            color    : var(--color-white);
+            color: var(--color-white);
         }
 
         &-avatar {
 
-            border-radius      : 99rem;
-            height             : 3rem;
-            aspect-ratio       : 1;
-            background-size    : cover;
+            border-radius: 99rem;
+            height: 3rem;
+            aspect-ratio: 1;
+            background-size: cover;
             background-position: center;
-            border             : 1px solid var(--color-white);
+            border: 1px solid var(--color-white);
         }
     }
 
     &-download-btn {
-        position  : absolute;
-        left      : 1rem;
-        bottom    : 1rem;
-        color     : var(--color-white);
-        opacity   : 0;
+        position: absolute;
+        left: 1rem;
+        bottom: 1rem;
+        color: var(--color-white);
+        opacity: 0;
         transition: opacity .5s;
+    }
+
+    &-buttons {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        display: flex;
+        gap: 5px;
+        opacity: 0;
+        transition: opacity .5s;
+        z-index: 1;
+        /* Ensure buttons are above other elements */
     }
 
     &:hover {
         .wallpaper {
             &-image {
-                -webkit-filter    : brightness(80%);
+                -webkit-filter: brightness(80%);
                 -webkit-transition: all 1s ease;
-                -moz-transition   : all 1s ease;
-                -o-transition     : all 1s ease;
-                -ms-transition    : all 1s ease;
-                transition        : all 1s ease;
+                -moz-transition: all 1s ease;
+                -o-transition: all 1s ease;
+                -ms-transition: all 1s ease;
+                transition: all 1s ease;
             }
 
 
             &-icon,
             &-creator,
-            &-download-btn {
+
+            &-download-btn,
+            &-buttons {
                 opacity: 1;
             }
+
         }
     }
 }
