--- a/free-wallpaper-front-end/src/pages/WallpaperDetail/WallpaperDetail.scss
+++ b/free-wallpaper-front-end/src/pages/WallpaperDetail/WallpaperDetail.scss
@@ -1,16 +1,22 @@
+@import "../../styles/media_queries";
+
 .wallpaper-detail {
 
     &-main {
         border-radius: 2rem;
-        margin       : 0 10rem;
+        margin       : 0rem;
         display      : flex;
-        gap          : 2.5rem;
+        gap          : 0.5rem;
         box-shadow   : 0rem 0rem 1rem 0.1rem var(--color-black-light);
         padding      : 2rem;
+
+        @include responsiveScreen(desktop) {
+            margin: 0 10rem;
+            gap   : 2.5rem;
+        }
     }
 
     &-top {
-
         &-icon {
             font-size       : 1.1rem;
             border-radius   : 9999rem;
