--- a/free-wallpaper-front-end/src/components/Search/Search.scss
+++ b/free-wallpaper-front-end/src/components/Search/Search.scss
@@ -3,8 +3,10 @@
     justify-content: center;
     align-items    : center;
     width          : 600px;
+    position       : relative;
 
     &-input {
+        width                    : 100%;
         height                   : 2.2rem;
         border                   : 0.1rem solid var(--color-brown);
         border-top-left-radius   : 0.3rem;
@@ -19,5 +21,24 @@
         padding                   : 0.8rem;
         border-top-right-radius   : 0.3rem;
         border-bottom-right-radius: 0.3rem;
+    }
+
+    &-hint {
+        background-color: var(--color-white-1);
+        display         : flex;
+        flex-direction  : column;
+        color           : var(--color-black);
+        gap             : 0.5rem;
+        width           : 100%;
+        position        : absolute;
+        top             : 2.7rem;
+
+        &-item {
+            padding: 0.4rem 1rem;
+
+            &:hover {
+                background-color: var(--color-white-2);
+            }
+        }
     }
 }
