--- a/free-wallpaper-front-end/src/pages/UserCollectionsDetails/UserCollectionsDetails.css
+++ b/free-wallpaper-front-end/src/pages/UserCollectionsDetails/UserCollectionsDetails.css
@@ -1,34 +1,57 @@
 .container {
-    padding: 20px;
-    font-family: 'Times New Roman', Times, serif;
-  }
-  
-  .text-center {
-    text-align: center;
-  }
-  
-  .text-muted {
-    color: #6c757d;
-    
-  }
-  
-  .rounded-circle {
-    border-radius: 50%;
-  }
-  
-  .mt-5 {
-    margin-top: 3rem 
-  }
-  ư
-  .mt-4 {
-    margin-top: 1.5rem 
-  }
-  
-  .ml-3 {
-    margin-left: 1rem 
-  }
-  
-  .font-weight-bold {
-    font-weight: bold;
-  }
-  
+  padding: 20px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-muted {
+  color: #6c757d;
+
+}
+
+.rounded-circle {
+  border-radius: 50%;
+}
+
+.mt-5 {
+  margin-top: 3rem
+}
+
+ư .mt-4 {
+  margin-top: 1.5rem
+}
+
+.ml-3 {
+  margin-left: 1rem
+}
+
+.font-weight-bold {
+  font-weight: bold;
+}
+
+.suggestions-list {
+  position: absolute;
+  z-index: 1000;
+  width: 100%;
+  max-height: 150px;
+  overflow-y: auto;
+  border: 1px solid #ced4da;
+  border-top: none;
+  background-color: #fff;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.suggestion-item {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.suggestion-item:hover {
+  background-color: #e9ecef;
+}
